Permisos de escritura al /tmp . FileProcesor funcionando.